cleaned up yaml and added markdown about my projects

--- a/src/content/portfolio/portfolio.yaml
+++ b/src/content/portfolio/portfolio.yaml
@@ -7,7 +7,7 @@ infoAboutMe:
       value: 10.07.2001
 
     - infoName: "Email:"
-     value: timongisler@icloud.com
+      value: timongisler@icloud.com
 
     - infoName: "Job:"
       value: Software Engineer
@@ -17,44 +17,44 @@ infoAboutMe:
   profilePicture: assets/img/profile.avif
 
 contacts:
-  - 
-  name: mail
-  value: timongisler@icloud.com
-  card_link: "mailto:timongisler@icloud.com"
-  image_url: assets\img\contactPictures\mail.svg
-  alt_image_description: Mail
+   - 
+    name: mail
+    value: timongisler@icloud.com
+    card_link: "mailto:timongisler@icloud.com"
+    image_url: assets\img\contactPictures\mail.svg
+    alt_image_description: Mail
 
-  - 
-  name: github
-  value: "@TimonGisler"
-  card_link: "https://github.com/TimonGisler"
-  image_url: assets\img\contactPictures\github.svg
-  alt_image_description: Mail
+   - 
+    name: github
+    value: "@TimonGisler"
+    card_link: "https://github.com/TimonGisler"
+    image_url: assets\img\contactPictures\github.svg
+    alt_image_description: Mail
 
-  - 
-  name: linkedIn
-  value: timongisler@icloud.com
-  card_link: "https://ch.linkedin.com/in/timon-gisler-752068230/de"
-  image_url: assets\img\contactPictures\linkedIn.svg
-  alt_image_description: Mail
+   - 
+    name: linkedIn
+    value: timongisler@icloud.com
+    card_link: "https://ch.linkedin.com/in/timon-gisler-752068230/de"
+    image_url: assets\img\contactPictures\linkedIn.svg
+    alt_image_description: Mail
 
 education:
   contacts:
-  - name: mail
-  value: timongisler@icloud.com
-  card_link: "mailto:timongisler@icloud.com"
-  image_url: assets\img\contactPictures\mail.svg
-  alt_image_description: Mail
+    - name: mail
+      value: timongisler@icloud.com
+      card_link: 'mailto:timongisler@icloud.com'
+      image_url: assets\img\contactPictures\mail.svg
+      alt_image_description: Mail
 
-- name: github
-  value: "@TimonGisler"
-  card_link: "https://github.com/TimonGisler"
-  image_url: assets\img\contactPictures\github.svg
-  alt_image_description: Mail
-
-- name: linkedIn
-  value: timongisler@icloud.com
-  card_link: "https://ch.linkedin.com/in/timon-gisler-752068230/de"
-  image_url: assets\img\contactPictures\linkedIn.svg
-  alt_image_description: Mail
+    - name: github
+      value: '@TimonGisler'
+      card_link: 'https://github.com/TimonGisler'
+      image_url: assets\img\contactPictures\github.svg
+      alt_image_description: Mail
+      
+    - name: linkedIn
+      value: timongisler@icloud.com
+      card_link: 'https://ch.linkedin.com/in/timon-gisler-752068230/de'
+      image_url: assets\img\contactPictures\linkedIn.svg
+      alt_image_description: Mail
 
