--- a/src/content/portfolio/portfolio.yaml
+++ b/src/content/portfolio/portfolio.yaml
@@ -21,22 +21,22 @@ contacts:
     name: mail
     value: timongisler@icloud.com
     card_link: "mailto:timongisler@icloud.com"
-    image_url: assets\img\contactPictures\mail.svg
+    image_url: /contact-pictures/mail.svg
     alt_image_description: Mail
 
    - 
     name: github
     value: "@TimonGisler"
     card_link: "https://github.com/TimonGisler"
-    image_url: assets\img\contactPictures\github.svg
-    alt_image_description: Mail
+    image_url: /contact-pictures/github.svg
+    alt_image_description: github
 
    - 
     name: linkedIn
     value: timongisler@icloud.com
     card_link: "https://ch.linkedin.com/in/timon-gisler-752068230/de"
-    image_url: assets\img\contactPictures\linkedIn.svg
-    alt_image_description: Mail
+    image_url: /contact-pictures/linkedIn.svg
+    alt_image_description: linkedin
 
 education:
   - time: 2008 - 2013
